@@ -187,6 +187,7 @@ PANOPTICON_BTN_APPLY="Save"
 PANOPTICON_BTN_CANCEL="Cancel"
 PANOPTICON_BTN_ENABLE="Enable"
 PANOPTICON_BTN_DISABLE="Disable"
+PANOPTICON_BTN_BATCH="Batch"
 PANOPTICON_APP_MENU_TITLE_ADMINISTRATION="Administration"
 PANOPTICON_APP_TEMPLATE_DEFAULT="Panopticon (Default Template)"
 PANOPTICON_APP_LBL_LANGUAGE="Language"
@@ -747,6 +748,12 @@ PANOPTICON_SITES_FIELD_CONFIG_UPTIME_ENABLED_HELP="Disabling this option will no
 PANOPTICON_SITES_FIELD_CONFIG_UPTIME_PATH="URL Path To Monitor"
 PANOPTICON_SITES_FIELD_CONFIG_UPTIME_STRING="Look For This String"
 PANOPTICON_SITES_FIELD_CONFIG_UPTIME_STRING_HELP="The site will be considered up if the page contains this string. Do <em>NOT</em> use HTML; all tags and multiple whitespaces are removed before evaluating this string. Leave blank to consider any HTTP 2xx response as adequate proof the site is up."
+PANOPTICON_SITES_BATCH_TITLE="Batch process the selected sites"
+PANOPTICON_SITES_BATCH_PROCESS="Process"
+PANOPTICON_SITES_BATCH_LBL_ADD_TO_GROUP="Add to group"
+PANOPTICON_SITES_BATCH_LBL_REMOVE_FROM_GROUP="Remove from group"
+PANOPTICON_SITES_BATCH_COMPLETED="The group membership of sites you selected has been processed."
+PANOPTICON_SITES_BATCH_ERR_NO_IDS="You have not selected any sites to process the group membership of."
 
 [Site]
 PANOPTICON_SITES_TITLE_READ="Site Information"
