@@ -4,8 +4,10 @@ Akeeba Panopticon 1.1.4
 + Much improved Docker support
 + Translatable dates
 + Load TinyMCE translations
++ Batch processing sites
 # [LOW] Wrong message about not having Akeeba Backup installed shown when adding a new site [gh-661]
 # [LOW] Wrong language in mail Blade templates [gh-658]
+# [LOW] Groups for disabled sites may not be displayed in the Sites admin page
 
 Akeeba Panopticon 1.1.3
 ================================================================================
